--- a/OldServer/templates/main.html
+++ b/OldServer/templates/main.html
@@ -19,8 +19,18 @@
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"> </script>
 
-    <script type=text/javascript> $(function() { $("#feedNow").click(function (event) { $.getJSON('/feedNow', { },
-    function(data) { }); return false; }); }); </script>
+    <script type=text/javascript> 
+    $(function() { 
+        $("#feedNow").click(
+            function (event) { 
+                $.getJSON(
+                    '/feedNow', 
+                    { },
+                    function(data) { }); 
+                return false; 
+            }); 
+        }); 
+    </script>
         </body>
     </head>
 </html>
