--- a/new/server/templates/base.html
+++ b/new/server/templates/base.html
@@ -10,9 +10,9 @@
         <title>Automatic Cat Feeder</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../assets/main_style.css">
-        <link rel="stylesheet" href="../assets/login.css">
-        <link rel="stylesheet" href="../assets/dashboard.css"
+        <link rel="stylesheet" href="{{ url_for('static',filename='main_style.css') }}" />
+        <link rel="stylesheet" href="{{ url_for('static',filename='login.css') }}" />
+        <link rel="stylesheet" href="{{ url_for('static',filename='dashboard.css') }}" />
     </head>
     <body>
         <div class="nav">
@@ -24,6 +24,6 @@
             {% block content %}
             {% endblock %}
         </div>
-        <script src="" async defer></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </body>
 </html>
