--- a/new/server/templates/login.html
+++ b/new/server/templates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="login-form">
         <h3>Login</h3>
-        <form method="POST" action='/login'>
+        <form method="POST" action='/testLogin'>
             <input type="text" name="username" placeholder="username" autofocus="" />
             <input type="password" name="password" placeholder="password" />
             <button>Login</button>
